--- a/fe/package.json
+++ b/fe/package.json
@@ -22,6 +22,7 @@
     "babel-preset-react": "^6.5.0",
     "gulp": "^3.9.1",
     "gulp-babel": "^6.1.2",
+    "gulp-headerfooter": "^1.0.3",
     "gulp-livereload": "^3.8.1",
     "gulp-react": "^3.1.0"
   },
