--- a/server/black-chat/package.json
+++ b/server/black-chat/package.json
@@ -7,14 +7,17 @@
   },
   "dependencies": {
     "body-parser": "~1.13.2",
-    "cookie-parser": "~1.3.5",
+    "cookie-parser": "^1.4.1",
     "debug": "~2.2.0",
     "express": "~4.13.1",
     "jade": "~1.11.0",
     "morgan": "~1.6.1",
+    "random-string": "^0.1.2",
     "serve-favicon": "~2.3.0"
   },
   "devDependencies": {
+    "mongodb": "^2.1.16",
+    "randomstring": "^1.1.4",
     "ws": "^1.0.1"
   }
 }
