--- a/fe/package.json
+++ b/fe/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "webpack -d --watch",
-    "build": "webpack -p"  
+    "build": "webpack -p"
   },
   "repository": {
     "type": "git",
@@ -25,6 +25,7 @@
     "babel-preset-react": "^6.11.1",
     "css-loader": "^0.24.0",
     "file-loader": "^0.9.0",
+    "jquery": "^3.1.0",
     "jsx-loader": "^0.13.2",
     "less": "^2.7.1",
     "less-loader": "^2.2.3",
@@ -39,5 +40,7 @@
     "webpack": "^1.13.2",
     "webpack-dev-server": "^1.15.1"
   },
-  "dependencies": {}
+  "dependencies": {
+    "react-router": "^2.8.0"
+  }
 }
