--- a/fe/package.json
+++ b/fe/package.json
@@ -38,7 +38,8 @@
     "style-loader": "^0.13.1",
     "url-loader": "^0.5.7",
     "webpack": "^1.13.2",
-    "webpack-dev-server": "^1.15.1"
+    "webpack-dev-server": "^1.15.1",
+    "webpack-livereload-plugin": "^0.8.2"
   },
   "dependencies": {
     "react-router": "^2.8.0"
